infrastructure/kubernetes/network/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: luvora

spec:
  podSelector: {}

  policyTypes:
    - Ingress
