infrastructure/kubernetes/network/gateway-to-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-to-services
  namespace: luvora

spec:
  podSelector:
    matchLabels:
      app: product-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway

      ports:
        - protocol: TCP
          port: 8080
